fix: scroll behind modal

--- a/src/components/imageModal/image-modal.module.scss
+++ b/src/components/imageModal/image-modal.module.scss
@@ -24,8 +24,6 @@
     width: 10vw;
     position: absolute;
 
-    background-color: rgba(0, 0, 0, 0.756);
-
     &:hover {
         background-color: rgba(89, 89, 89, 0.626);
     }
